tests/typeck/invalid/non_bool_condition.vit
space tests/typeck/invalid/non_bool_condition

proc main() -> int {
  if "oops" {
    give 1;
  }
  give 0;
}
